# shixun1

./: .gitignore  DIRECTORY_STRUCTURE.md  LICENSE  README.md  docker-compose.yml  requirements.txt  sync_to_car.sh
.github/workflows/: ci.yml
app/: client_test.py
app/miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  sitemap.json
app/miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
app/miniprogram/pages/status/: status.js  status.json  status.wxml  status.wxss
app/web/: index.html  script.js
dev_ws/src/aiserver_pkg/: package.xml  setup.py
dev_ws/src/guide_pkg/: package.xml  setup.py
dev_ws/src/guide_pkg/config/: classrooms.yaml  face_room_map.yaml  landmark.yaml
dev_ws/src/guide_pkg/guide_pkg/: arrival_fusion.py  guide_node.py  joystick_ctrl.py  utils.py
dev_ws/src/guide_pkg/launch/: aliases.sh  guide_launch.py  start.sh
dev_ws/src/guide_pkg/resource/: guide_pkg
dev_ws/src/guide_pkg/srv/: NavigateRoom.srv
docs/: 云平台集成与CI说明.md  人脸识别使用说明.md  分布式通信配置.md  接口定义文档.md  目录说明.md  答辩PPT.pptx
maps/: README.md  map.yaml  map_v1.yaml
records/: 人脸识别测试记录.md  导航测试表.md  建图记录.md  最终测试报告.md  视觉识别测试记录.md
resource/audio/: README.md
scripts/: checklist.sh  cloud_reporter.py  demo.sh  deploy.sh  install_deps.sh  sync.sh  test_mqtt.py
vision/doorplate/: doorplate_detector.py  doorplate_ocr.py  test_yolo_ocr.py
vision/doorplate/yolov5/: README.md
vision/face/: face_recognizer.py  test_face.py
vision/face/known_faces/: README.md
vision/launch/: vision_launch.py
vision/voice/: test_voice.py  voice_player.py
(+3 files in other folders)
